<resources>
    <string name="app_name">AE Shop</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_get_started">Sign in to get started</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_create">Don\'t have an account?</string>
    <string name="username">username</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account">Create an account</string>
    <string name="account">Account</string>
    <string-array name="price_filter_options">
        <item>Price</item>
        <item>Under $25</item>
        <item>$25 to $50</item>
        <item>$50 to $100</item>
        <item>Above $100</item>
    </string-array>
</resources>